Fix scrollbar issues

--- a/rauha/css/base.css
+++ b/rauha/css/base.css
@@ -71,7 +71,7 @@ a:focus {
 .content {
 	display: flex;
 	flex-direction: column;
-	width: 100vw;
+	width: 100%;
 	height: calc(100vh - 13rem);
 	position: relative;
 	justify-content: flex-start;
