--- a/rauha/css/styles.css
+++ b/rauha/css/styles.css
@@ -95,14 +95,11 @@
   }
 }
 
-/* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
-  display: none;
-}
-
 body {
+  letter-spacing: 0.0625em;
   margin: 0;
   min-height: 100%;
+  width: 100%;
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
@@ -112,11 +109,6 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-
-  /* Hide scrollbar for IE, Edge and Firefox */
-  -ms-overflow-style: none;  /* IE and Edge */
-  scrollbar-width: none;  /* Firefox */
-  overflow-y: scroll;
 }
 
 hr {
@@ -5456,7 +5448,7 @@ textarea.form-control-lg {
   top: 0;
   left: 0;
   z-index: var(--bs-backdrop-zindex);
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: var(--bs-backdrop-bg);
 }
@@ -5535,7 +5527,7 @@ textarea.form-control-lg {
   }
 }
 .modal-fullscreen {
-  width: 100vw;
+  width: 100%;
   max-width: none;
   height: 100%;
   margin: 0;
@@ -5555,7 +5547,7 @@ textarea.form-control-lg {
 
 @media (max-width: 575.98px) {
   .modal-fullscreen-sm-down {
-    width: 100vw;
+    width: 100%;
     max-width: none;
     height: 100%;
     margin: 0;
@@ -5575,7 +5567,7 @@ textarea.form-control-lg {
 }
 @media (max-width: 767.98px) {
   .modal-fullscreen-md-down {
-    width: 100vw;
+    width: 100%;
     max-width: none;
     height: 100%;
     margin: 0;
@@ -5595,7 +5587,7 @@ textarea.form-control-lg {
 }
 @media (max-width: 991.98px) {
   .modal-fullscreen-lg-down {
-    width: 100vw;
+    width: 100%;
     max-width: none;
     height: 100%;
     margin: 0;
@@ -5615,7 +5607,7 @@ textarea.form-control-lg {
 }
 @media (max-width: 1199.98px) {
   .modal-fullscreen-xl-down {
-    width: 100vw;
+    width: 100%;
     max-width: none;
     height: 100%;
     margin: 0;
@@ -5635,7 +5627,7 @@ textarea.form-control-lg {
 }
 @media (max-width: 1399.98px) {
   .modal-fullscreen-xxl-down {
-    width: 100vw;
+    width: 100%;
     max-width: none;
     height: 100%;
     margin: 0;
@@ -6694,7 +6686,7 @@ textarea.form-control-lg {
   top: 0;
   left: 0;
   z-index: 1040;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   background-color: #000;
 }
@@ -7439,11 +7431,11 @@ textarea.form-control-lg {
 }
 
 .vw-100 {
-  width: 100vw !important;
+  width: 100% !important;
 }
 
 .min-vw-100 {
-  min-width: 100vw !important;
+  min-width: 100% !important;
 }
 
 .h-25 {
@@ -10986,10 +10978,6 @@ html {
   scroll-padding-top: calc(4.5rem - 1px);
 }
 
-body {
-  letter-spacing: 0.0625em;
-}
-
 #mainNav {
   min-height: 3.5rem;
   background-color: #fff;
@@ -11077,7 +11065,7 @@ body {
 /*// Glow Border Animation //*/
 
 .animated-border-box, .animated-border-box-glow{
-  width: 400px;
+  width: 350px;
   max-width: 85%;
   aspect-ratio: 1;
   position: absolute;
